[workspace]
members = [
  "crates/*",
  "primitives",
  "parachain",
  "parachain/runtime/*",
  "standalone",
  "standalone/runtime",
  "rpc",
]

resolver = "2"

# disable incremental compilation to work around a compiler bug.
# See https://blog.rust-lang.org/2021/05/10/Rust-1.52.1.html
# When we upgrade compiler versions, we may be able to reenable incremental.
[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
incremental = false

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-executive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-balances = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-bounties = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-democracy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-identity = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-im-online = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-indices = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-membership = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-mmr = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
mmr-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-nis = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-offences = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-proxy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-recovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-society = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-tips = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-utility = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-vesting = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-client-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-client-db = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-executor = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-informant = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-network = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-network-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-peerset = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-service = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
# sp-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-inherents = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-weights = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-beefy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-child-bounties = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-nomination-pools  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-nomination-pools-benchmarking  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-nomination-pools-runtime-api  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-preimage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-conviction-voting = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-fast-unstake = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-ranked-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-referenda = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-whitelist = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-network-light = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-network-sync = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
fork-tree  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
mmr-gadget  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-storage-monitor  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
binary-merkle-tree  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
pallet-staking-runtime-api  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-beefy  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-beefy-rpc  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-grandpa  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-consensus-grandpa-rpc  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sc-network-transactions  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus-beefy  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }
sp-consensus-grandpa  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.40" }

[patch."https://github.com/paritytech/polkadot"]
kusama-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
pallet-xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-cli = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-client = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-core-av-store = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-overseer = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-service = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
rococo-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
westend-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
xcm-builder = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
xcm-executor = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
xcm-simulator = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-availability-distribution = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-erasure-coding = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-network-bridge = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
polkadot-node-jaeger = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
tracing-gum = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }
tracing-gum-proc-macro = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.40" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-client-cli = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-client-network = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-client-service = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-pallet-parachain-system  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
parachain-info  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-relay-chain-inprocess-interface  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-relay-chain-rpc-interface  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-client-collator  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }
cumulus-relay-chain-minimal-node  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.40" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library"]
orml-asset-registry = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-oracle = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-utilities = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-vesting = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-xcm-support = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-xcm = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }
orml-xtokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "a4977fe70eeea93b072706f7ab2d2577f4a8d320" }